k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ic-webapp-service
spec:
  selector:
    app: ic-webapp
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
