k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ic-webapp-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - ic-app.example.com
      secretName: ic-webapp-tls
  rules:
    - host: ic-app.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ic-webapp-service
                port:
                  number: 80
